--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,3 +1,3 @@
-email: 'twang@genetics.wustl.edu'
+email: "twang@wustl.edu"
 phone: "Ting's Office (Room 5211): (314) 286-0865"
-contact_button_link: 'contact'
+contact_button_link: "contact"
